--- a/diamond/build.gradle
+++ b/diamond/build.gradle
@@ -17,6 +17,10 @@ repositories {
     mavenCentral()
 }
 
+run {
+    standardInput = System.in
+}
+
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter:5.8.2'
 }
